--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start" : "node src/server/server.js",
+    "start" : "node ./src/server/server.js",
     "dev": "nodemon ./src/server/server.js"
   },
   "repository": {
