--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/ChristhianSM/curso_node_coderhouse/issues"
   },
-  "homepage": "https://github.com/ChristhianSM/curso_node_coderhouse#readme"
+  "homepage": "https://github.com/ChristhianSM/curso_node_coderhouse#readme",
+  "engines": {
+    "node": "14.17.5",
+    "npm": "6.14.14"
+  }
 }
