--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start" : "node src/server/index.js",
-    "dev": "nodemon ./src/server/server.js"
+    "start": "node src/server/index.js",
+    "dev": "nodemon src/server/index.js"
   },
   "repository": {
     "type": "git",
