--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "express": "^4.17.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "tailwindcss": "^3.0.22"
+  },
   "scripts": {
     "start": "node src/server/index.js",
-    "dev": "nodemon src/server/index.js"
+    "dev": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
