--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Curso de backend",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "express-handlebars": "^6.0.2",
+    "multer": "^1.4.4"
   },
   "devDependencies": {
-    "tailwindcss": "^3.0.22"
+    "tailwindcss": "^3.0.23"
   },
   "scripts": {
     "start": "node src/server/index.js",
