--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "Curso de backend",
   "main": "index.js",
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "tailwindcss": "^3.0.23"
   },
   "scripts": {
-    "start": "node src/server/index.js",
+    "start": "node src/index.js",
     "dev": "nodemon src/index.js"
   },
   "repository": {
