--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "multer": "^1.4.4",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "tailwindcss": "^3.0.23"
