--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express-handlebars": "^6.0.2",
     "multer": "^1.4.4",
     "pug": "^3.0.2",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.4.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "tailwindcss": "^3.0.23"
