--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
+    "express-validator": "^6.14.0",
+    "knex": "^1.0.3",
     "multer": "^1.4.4",
+    "mysql": "^2.18.1",
     "pug": "^3.0.2",
     "socket.io": "^4.4.1",
     "uuid": "^8.3.2"
