--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Curso de backend",
   "main": "index.js",
+  "type": "module",
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.2",
