--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "express-validator": "^6.14.0",
     "knex": "^0.95.15",
+    "mongoose": "^6.2.7",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "pug": "^3.0.2",
