--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "express-validator": "^6.14.0",
+    "faker": "^5.5.3",
     "knex": "^0.95.15",
     "mongoose": "^6.2.7",
     "multer": "^1.4.4",
