--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^6.2.7",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
+    "normalizr": "^3.6.2",
     "pug": "^3.0.2",
     "socket.io": "^4.4.1",
     "sqlite3": "^5.0.2",
