--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
+    "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
+    "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "faker": "^5.5.3",
     "knex": "^0.95.15",
@@ -17,8 +21,9 @@
     "mysql": "^2.18.1",
     "normalizr": "^3.6.2",
     "pug": "^3.0.2",
+    "session-file-store": "^1.5.0",
     "socket.io": "^4.4.1",
-    "sqlite3": "^5.0.2",
+    "sqlite3": "^5.0.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
