--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "session-file-store": "^1.5.0",
     "socket.io": "^4.4.1",
     "sqlite3": "^5.0.4",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yargs": "^17.4.1"
   },
   "devDependencies": {
     "tailwindcss": "^3.0.23"
