--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
@@ -17,7 +18,10 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "faker": "^5.5.3",
+    "forever": "^4.0.3",
     "knex": "^0.95.15",
+    "loadtest": "^5.2.0",
+    "log4js": "^6.5.1",
     "mongoose": "^6.2.7",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
@@ -36,7 +40,9 @@
   },
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "fork": "pm2 start src/index.js",
+    "cluster": "pm2 start src/index.js -i 8"
   },
   "repository": {
     "type": "git",
